--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 :root {
   --blue-color: #448bfc;
   --dark-grey-color: #1D1E22;
-  --white-color: #00ff1a;
+  --white-color: #ffffff;
 }
 
 a {
