--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
 
 body {
   width: 100%;
+  max-width: 100%;
   margin: 0 auto;
   padding: 0;
   font-family: Nunito;
@@ -29,6 +30,10 @@ a {
   color: var(--white-color);
 }
 
+.fadeTarget{
+  opacity: 0;
+}
+
 nav {
   height: 50px;
   min-width: 100%;
@@ -39,7 +44,7 @@ nav {
 }
 
 .navlink {
-  opacity: 0;
+  
   color: #d4d4d4;
   float: right;
   padding: 10px 15px;
@@ -58,10 +63,9 @@ nav {
   /*
   background: url("https://raw.githubusercontent.com/Nootuff/Storage/master/Portfolio_images/code-2.jpg")
     no-repeat center fixed;
-  
   background-size: cover;
-  position: relative;
-*/
+    position: relative;
+  */
   height: 100vh;
   text-align: center;
 }
@@ -99,13 +103,20 @@ nav {
 #intro{
   padding-top: 9vw;
   font-size: 3em;
+  max-width: 100%;
+  box-sizing: border-box;
 }
+
+#introBreaker{
+    display: none;
+  }
 
 #hello {
   position: relative;
   color: transparent;
   white-space : nowrap;
   text-align: left;
+  max-width: 100%;
 }
 
 #hello::before{
@@ -116,27 +127,22 @@ nav {
   width: 0;
   height: 100%;
   color: var(--white-color);
-  /*-webkit-text-stroke: 1px; black;*/
   overflow: hidden;
   animation: textWipe 1.5s forwards;
   }
   
-
 #adam {
   color: transparent;
-  animation: glow 1.5s forwards;
-  animation-delay: 0.7s;
-  animation-direction: alternate;
+  position:relative;
+  z-index:0;
 }
 
 #sub-heading {
-  opacity: 0;
   margin-top: -25px;
 }
 
 
 .icon-container {
-  opacity: 0;
   margin: 10px;
   border: 5px solid var(--white-color);
   border-radius: 50%;
@@ -203,6 +209,12 @@ nav {
   }
 }
 
+.glowAnim{
+  animation: glow 1.5s forwards;
+  animation-delay: 0.7s;
+  animation-direction: alternate;
+}
+
 @keyframes glow{
   0%{text-shadow:0px 0px 1px var(--light-blue-color),0px 0px 0.5px var(--white-color);
     color: transparent}
@@ -231,16 +243,9 @@ opacity: 0;
   }
 }
 
-@keyframes slideUp{
-  0%{
-    opacity: 0;
-  }
-  100%{
-    transform:translatey(0);
-    opacity: 1;
-  }
-}
 
+
+/*
 @keyframes slideDown{
   0%{
     opacity: 0;
@@ -250,20 +255,84 @@ opacity: 0;
     opacity: 1;
   }
 }
+*/
 
 .heading {
-  margin-top: 40px;
+  margin: 55px auto 0;
+  font-size: 45px;
   display: inline-block;
   background-color: var(--blue-color);
   width: 70%;
   height: auto;
   text-align: center;
   border-radius: 8px;
+opacity: 0;
+}
+
+.slideLeft{
+  -ms-transform: translateX(100px);
+-webkit-transform: translateX(100px);
+-moz-transform: translateX(100px);
+-o-transform: translateX(100px);
+    transform:translateX(100px);
+  transform: translateX(100px);
+}
+
+.slideRight{
+  
+  -ms-transform: translateX(-100px);
+-webkit-transform: translateX(-100px);
+-moz-transform: translateX(-100px);
+-o-transform: translateX(-100px);
+    transform:translateX(-100px);
+  transform: translateX(-100px);
+  
+}
+
+.slideSideAnim{
+  animation: slideSide 1.5s forwards, backgroundColorPalette 6s infinite alternate;
+  
+}
+
+
+@keyframes backgroundColorPalette {
+	0% {
+		background: var(--dark-blue-color);
+	}
+	25% {
+		background: var(--light-blue-color);
+	}
+	50% {
+		background: red;
+	}
+	75% {
+		background: orange;
+	}
+	100% {
+		background: green;
+	}
+}
+
+
+@keyframes slideSide{
+  0%{
+    opacity: 0;
+  }
+
+  100%{
+    -ms-transform: translateX(0);
+-webkit-transform: translateX(0);
+-moz-transform: translateX(0);
+-o-transform: translateX(0);
+    transform:translateX(0);
+ 
+    opacity: 1;
+  }
 }
 
 #about {
-  font-size: 30px;
-  height: auto;
+  
+  height: 500px;
   padding-bottom: 20px;
   text-align: center;
 }
@@ -279,8 +348,6 @@ opacity: 0;
 }
 
 .proficiency-list {
-  font-size: 23px;
-  list-style-type: none;
   text-align: center;
 }
 
@@ -289,65 +356,148 @@ opacity: 0;
   padding: auto;
   font-size: 25px;
   border-spacing: 25px 0px;
+  opacity: 0;
 }
 
+.openAnim {
+  animation: wipe-enter 2.5s forwards;
+}
+
+@keyframes wipe-enter {
+0% {
+  transform: scaleX(0);   
+  opacity: 0;
+}
+50% {
+  transform: scaleX(1);
+}
+100%{
+  opacity: 1;
+}
+}
+
+/*
+td{
+  text-align: center;
+}
+
+.test {
+  height: 30px;
+  font-size: 23px;
+  box-sizing: border-box;
+ 
+  overflow: hidden;
+}
+
+
+.col-left{
+  padding-right: 100px;
+}
+
+.col-right{
+  padding-left: 100px;
+}
+
+
+.row-two {
+  animation-delay: 2s;
+}
+
+.row-three{
+  animation-delay: 4s;
+}
+
+.row-four{
+  animation-delay: 6s;
+}
+
+
+
+.colSlideLeftAnim{
+  animation: colSlideLeft 1.5s forwards;
+}
+
+.colSlideRightAnim{
+  animation: colSlideRight 1.5s forwards;
+}
+
+@keyframes colSlideLeft {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1;
+    padding-right: 0;
+  }
+}
+
+@keyframes colSlideRight {
+  0% {
+    opacity: 0
+  }
+
+  100% {
+    opacity: 1;
+    padding-left: 0;
+  }
+}
+*/
+
 #projects {
-  font-size: 30px;
   height: auto;
   background-color: #3b3b3b;
   text-align: center;
   padding-bottom: 20px;
+  overflow: hidden;
 }
 
-#grid {
+.project-base {
   display: grid;
   height: auto;
-  width: 80%;
-  margin: 17px auto 0px;
-  grid-template-columns: 1fr 1fr;
+  width: 85%;
+  margin: 49px auto 0px;
+ grid-template-columns: 1fr 1fr;
   grid-gap: 2%;
-  text-align: center;
   padding: 30px;
   overflow: hidden;
 }
 
-.project-tile {
-  width: 100%;
-  height: auto;
-  cursor: pointer;
-  color: var(--white-color);
-  margin: 0px auto;
-}
-
-.project-image {
-  margin-bottom: -41px;
-}
-
-.caption {
-  height: auto;
+.project-title{
   font-size: 30px;
-  padding-top: 10px;
-  transition: 0.5s ease-in-out;
-  -webkit-transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
-}
-
-.pointers {
-  opacity: 0;
-  transition: 0.5s ease-in-out;
-  -webkit-transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
   color: var(--blue-color);
-  font-weight: bold;
 }
 
-.project-tile:hover .caption {
-  padding-right: 10px;
+.project-blurb{
+  text-align: left;
+  font-size: 20px;
 }
 
-.project-tile:hover .pointers {
-  opacity: 1;
-  padding-left: 10px;
+.top-image{
+  display: none;
+}
+
+.bottom-image{
+  display: block;
+}
+
+.slideUpTarget{
+  opacity: 0;
+  margin-top: 80px;
+}
+
+.slideUpAnim{
+  animation: slideUp 0.8s forwards;
+}
+
+@keyframes slideUp{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    margin-top: 49px ;
+    opacity: 1;
+  }
 }
 
 #link-container {
@@ -368,6 +518,7 @@ opacity: 0;
   -webkit-transition: 0.5s ease-in-out;
   -moz-transition: 0.5s ease-in-out;
   padding: 2px;
+  font-size: 30px;
 }
 
 #link-container:hover {
@@ -447,10 +598,17 @@ footer p {
     height: auto;
   }
 
-  #grid {
-    grid-template-columns: 1fr;
-    padding: 30px 30px 30%;
+   .project-base{
+     grid-template-columns: 1fr;
   }
+  
+  .top-image{
+  display: block;
+}
+
+.bottom-image{
+  display: none;
+}
 
   .heading {
     font-size: 30px;
@@ -460,18 +618,23 @@ footer p {
 
 /* tablet */
 @media only screen and (max-width: 800px) {
-  .proficiency-table {
-  font-size: 18px;  
-    width: 100%; 
-  }
+ 
   
-  .pointers {
-    opacity: 1;
-  }
+ 
+  
+  
 }
 
 /* phone vertical */
 @media only screen and (max-width: 450px) {
+  #intro{
+    font-size: 40px;
+  }
+  
+  #introBreaker{
+    display: block;
+  }
+  
   #about-container {
     width: 95%;
   }
@@ -479,15 +642,11 @@ footer p {
   .icon-container {
     margin: 3px;
   }
-
-  #grid {
-    grid-template-columns: 1fr;
-    width: 100%;
-    padding: 0px 0px 45%;
+  
+   .proficiency-table {
+  font-size: 18px;  
+    width: 100%; 
   }
-
-  .caption {
-    font-size: 20px;
-    padding-top: 20px;
-  }
+  
+  
 }
